# crazyswarm_tank

./: README.md
crazyswarm2/: README.md
crazyswarm2/crazyflie/: CMakeLists.txt
crazyswarm2/crazyflie/config/: crazyflies.yaml  motion_capture.yaml
crazyswarm2/crazyflie_examples/: setup.cfg
crazyswarm2/crazyflie_examples/crazyflie_examples/: goto.py  goto_node.py  hello_all.py
crazyswarm2/crazyflie_examples/launch/: keyboard_velmux_launch.py  takeoff_land.launch.py
crazyswarm2/crazyflie_py/crazyflie_py/: crazyflie.py
