[options.entry_points]
console_scripts =
    goto = crazyflie_examples.goto:main
    hello_world = crazyflie_examples.hello_world:main
    hello_all = crazyflie_examples.hello_all:main
    nice_hover = crazyflie_examples.nice_hover:main
    figure8 = crazyflie_examples.figure8:main
    group_mask = crazyflie_examples.group_mask:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
    swap = crazyflie_examples.swap:main
    infinite_flight = crazyflie_examples.infinite_flight:main
    arming = crazyflie_examples.arming:main
    goto_node = crazyflie_examples.goto_node:main
